update .introducao e .sobre

--- a/css/index.css
+++ b/css/index.css
@@ -74,3 +74,19 @@ img{
 .menu-nav a:hover{
     color: #122ab2;
 }
+
+.introducao{
+    font-size: 3em;
+    font-weight: bold;
+    line-height: 1;
+    max-width: 960px;
+    margin:0 auto;
+    padding: 60px 10px;
+}
+
+.sobre{
+    border-top: solid 2px #2c70ff;
+    border-bottom: solid 2px #2c70ff;
+    max-width: 960px;
+    margin: 0 auto;
+}
