--- a/css/index.css
+++ b/css/index.css
@@ -116,3 +116,138 @@ img{
     flex:1 1 160px;
     margin: 0 10px;
 }
+
+.produtos{
+    max-width: 960px;
+    margin: 60px auto;
+}
+
+.produtos h1{
+    font-size: 3em;
+    font-weight: bold;
+    margin: 0 10px 60px 10px;
+}
+
+.produtos-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
+
+.produtos-item{
+    flex:1 1 175px;
+    margin: 10px;
+}
+
+.produtos-item h2{
+    font-size: 3em;
+    font-weight: bold;
+    color: #a4a4a4;
+    background:#f7f7f7;
+    padding: 60px 20px;
+}
+
+.purple{
+    border-top: #ae81ff solid 8px; 
+}
+
+.pink{
+    border-top: #f9265e solid 8px; 
+}
+
+.blue{
+    border-top: #66d9eb solid 8px; 
+}
+
+.preco{
+    background:#f7f7f7;
+    padding: 60px; 
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
+
+.preco-item{
+    flex: 1 1 250px;
+    border: 4px solid white;
+    padding: 20px;
+    margin: 10px;
+}
+
+.preco-item h2{
+    font-size: 3em;
+    font-weight: bold;
+    color: #a4a4a4;
+    text-align: center;
+    margin-top:20px;
+}
+
+.preco-item span{
+    max-width: 300px;
+    display: block;
+    margin: 20px auto;
+    font-size: 3em;
+    text-align: center;
+    font-weight: bold;
+    padding: 10px 0 5px 0;
+    border-top: 4px solid white;
+    border-bottom: 4px solid white;
+}
+
+.preco-item ul{
+    max-width: 300px;
+    margin: 20px auto;
+    font-size: 1.25em;
+    line-height: 2;
+    font-style: italic;
+    color: #7c7c7c;
+}
+
+.preco-item li{
+    display: flex;
+}
+
+.preco-item li::before{
+    content:'';
+    display:block;
+    width: 6px;
+    height: 6px;
+    background: #2c70ff;
+    border-radius: 50%;
+    align-self: center;
+    margin-right: 5px; 
+}
+
+.preco-item a{
+    max-width: 300px;
+    display: block;
+    text-decoration: none;
+    margin: 20px auto;
+    border: 4px solid;
+    color: #222;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 2.25em;
+    padding: 15px 0;
+    text-align: center;
+}
+
+sup{
+    font-size: 1.5rem;
+}
+
+@media (max-width: 800px){
+    .preco{
+        padding-left: 10px;
+        padding-right: 10px; 
+    }
+
+    .preco .preco-item:nth-child(3){
+        order: -2;
+    }
+
+    .preco .preco-item:nth-child(2){
+        order: -1;
+    }
+}
+}
